# peek

./: .bashrc  .gitignore  README.md  environment.yaml  environment.yml  environment_win.yaml  file_tree.txt  jobs.txt  nutrispeech.spec  peek_env.yaml  pyproject.toml  requirements.txt
docs/: Experiment Exposé.docx  figures.pptx  manuscript.md  references.bib
peek/: __init__.py  analyze_tag_db.py  annotation.py  detection.py  evaluate.py  forest_nano.py  get_meta.py  motion_analysis.py  open_img.py  qrcorrect.py  qrgen.py  read.py  read_eve.py  read_meta.py  segmentation.py
peek/evaluation/: main.py  plot.py
peek/image/: __init__.py  analysis.py  process.py
peek/ml/: __init__.py  data.py
peek/shell/: delete_analysis_files.sh  detection_all.sh  detection_session.sh  move_files.sh  (+2 more)
scripts/: daphvsculex.ipynb  grouping.py  ph_extrapolate.py  ph_predict.py  physicochemical.ipynb  status.ipynb  treatment_design.py
settings/: annotations_default.json  dynamic_segmentation_default.json  evaluate_default.json  masking_20210225.json  qr_detect_default.json  segmentation_default.json
src/: annotation.py  data_import.py  data_import_tar.py  detection.py  edge.py  edge_detection.py  evaluate.py  evaluate_classic.py  forest_nano.py  get_meta.py  gifnano.py  hack_board.py  machine_learning.py  motion_analysis.py  movement_edge.py  nutrient_timers.py  open_img.py  qrcheck.py  qrcorrect.py  qrgen.py  random_forests.py  random_forests_nano.py  read.py  read_eve.py  read_kaananoij.R  read_measurements.py  read_meta.py  segmentation.py  slice_image.py  stochastic_gradient_descent.py  structured_edge copy.py  structured_edge.py  test.csv  test.ipynb
tests/: test_i_read.py  test_ii_analyses.py  test_x_conclude.py
(+112 files in other folders)
